# server/src/main/java/fr/finanting/server/controller/CategoryController.java
@@ -3,6 +3,7 @@ package fr.finanting.server.controller;
 import fr.finanting.server.codegen.api.CategoryApi;
 import fr.finanting.server.codegen.model.CategoryDTO;
 import fr.finanting.server.codegen.model.CategoryParameter;
+import fr.finanting.server.codegen.model.TreeCategoryDTO;
 import fr.finanting.server.service.CategoryService;
 
 import java.util.List;
@@ -13,7 +14,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
-@RequestMapping("category")
 public class CategoryController extends MotherController implements CategoryApi {
 
     protected final CategoryService categoryService;
@@ -38,59 +38,24 @@ public class CategoryController extends MotherController implements CategoryApi 
     }
 
     @Override
-    public ResponseEntity<List<CategoryDTO>> getCategories() {
-        return null;
+    public ResponseEntity<List<TreeCategoryDTO>> getGroupCategories(Integer groupId) {
+        final String userName = this.getCurrentPrincipalName();
+        List<TreeCategoryDTO> treeCategoryDTOList = this.categoryService.getGroupCategory(groupId, userName);
+        return new ResponseEntity<>(treeCategoryDTOList, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<List<CategoryDTO>> getGroupCategories(Integer groupId) {
-        return null;
+    public ResponseEntity<List<TreeCategoryDTO>> getUserCategories() {
+        final String userName = this.getCurrentPrincipalName();
+        List<TreeCategoryDTO> treeCategoryDTOList = this.categoryService.getUserCategory(userName);
+        return new ResponseEntity<>(treeCategoryDTOList, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<CategoryDTO> updateCategory(CategoryParameter body) {
-        return null;
+    public ResponseEntity<Void> updateCategory(Integer categoryId, CategoryParameter body) {
+        final String userName = this.getCurrentPrincipalName();
+        this.categoryService.updateCategory(categoryId, body, userName);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
-    /*
-    @PostMapping("/createCategory")
-    public void createCategory(final Authentication authentication,
-                                    @RequestBody final CreateCategoryParameter createCategoryParameter)
-            throws CategoryNotExistException, BadAssociationCategoryUserGroupException, GroupNotExistException, CategoryNoUserException, UserNotInGroupException, BadAssociationCategoryTypeException  {
-        final UserDetailsImpl userDetailsImpl = (UserDetailsImpl) authentication.getPrincipal();
-        this.categoryService.createCategory(createCategoryParameter, userDetailsImpl.getUsername());
-    }
-
-    @PostMapping("/updateCategory")
-    public void updateCategory(final Authentication authentication,
-                                    @RequestBody final UpdateCategoryParameter updateCategoryParameter)
-            throws CategoryNotExistException, BadAssociationCategoryUserGroupException, GroupNotExistException, CategoryNoUserException, UserNotInGroupException, BadAssociationCategoryTypeException  {
-        final UserDetailsImpl userDetailsImpl = (UserDetailsImpl) authentication.getPrincipal();
-        this.categoryService.updateCategory(updateCategoryParameter, userDetailsImpl.getUsername());
-    }
-
-    @DeleteMapping("/deleteCategory")
-    public void deleteCategory(final Authentication authentication,
-                                @RequestBody final DeleteCategoryParameter deleteCategoryParameter)
-            throws CategoryNotExistException, CategoryNoUserException, UserNotInGroupException, DeleteCategoryWithChildException{
-        final UserDetailsImpl userDetailsImpl = (UserDetailsImpl) authentication.getPrincipal();
-        this.categoryService.deleteCategory(deleteCategoryParameter, userDetailsImpl.getUsername());
-    }
-
-    @GetMapping("/getGroupCategory/{groupName}")
-    public List<TreeCategoriesDTO> getGroupCategory(final Authentication authentication, 
-                                            @PathVariable final String groupName)
-            throws GroupNotExistException, UserNotInGroupException {
-        final UserDetailsImpl userDetailsImpl = (UserDetailsImpl) authentication.getPrincipal();
-        return this.categoryService.getGroupCategory(groupName, userDetailsImpl.getUsername());
-    }
-
-    @GetMapping("/getUserCategory")
-    public List<TreeCategoriesDTO> getUserCategory(final Authentication authentication) {
-        final UserDetailsImpl userDetailsImpl = (UserDetailsImpl) authentication.getPrincipal();
-        return this.categoryService.getUserCategory(userDetailsImpl.getUsername());
-    }
-
-     */
-    
 }
