# server/src/main/java/fr/finanting/server/dto/TreeCategoryDTOBuilder.java
@@ -1,0 +1,29 @@
+package fr.finanting.server.dto;
+
+import fr.finanting.server.codegen.model.TreeCategoryDTO;
+import fr.finanting.server.model.Category;
+
+import java.util.ArrayList;
+import java.util.List;
+
+public class TreeCategoryDTOBuilder extends Transformer<Category, TreeCategoryDTO> {
+
+    @Override
+    public TreeCategoryDTO transform(Category input) {
+        TreeCategoryDTO treeCategoryDTO = new TreeCategoryDTO();
+        treeCategoryDTO.setCategoryType(TreeCategoryDTO.CategoryTypeEnum.fromValue(input.getCategoryType().name()));
+        treeCategoryDTO.setAbbreviation(input.getAbbreviation());
+        treeCategoryDTO.setId(input.getId());
+        treeCategoryDTO.setLabel(input.getLabel());
+        treeCategoryDTO.setDescription(input.getDescritpion());
+        treeCategoryDTO.setChildTreeCategoriesDTOs(this.transformAll(input.getChild()));
+        return treeCategoryDTO;
+    }
+
+    @Override
+    public List<TreeCategoryDTO> transformAll(List<Category> input) {
+        List<TreeCategoryDTO> treeCategoryDTOList = new ArrayList<>();
+        input.forEach(category -> treeCategoryDTOList.add(this.transform(category)));
+        return treeCategoryDTOList;
+    }
+}
